Correct BeOS VPATH build for 0.9
PR: 44362
Submitted by: <andreas.faerber web.de>


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/0.9.x@652827 13f79535-47bb-0310-9956-ffa450edef68

--- a/threadproc/beos/Makefile.in
+++ b/threadproc/beos/Makefile.in
@@ -19,7 +19,7 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch -I$(OSDIR) -I$(DEFOSDIR)
 CLEAN_TARGETS = apr_proc_stub /boot/home/config/bin/apr_proc_stub
 
 apr_proc_stub:
-	$(CC) apr_proc_stub.c \
+	$(CC) $(srcdir)/apr_proc_stub.c \
 	&& cp apr_proc_stub /boot/home/config/bin
 
 # DO NOT REMOVE
