Avert the pid "ld" format when building to huge-longs on solaris 64 bit.
PR: 43388
Submitted by: Eric Covener <covener gmail.com>
Backports: 652859


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/1.3.x@652860 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -1347,7 +1347,11 @@ case $host in
        size_t_fmt="lu"
        ;;
    *-solaris*)
-       pid_t_fmt="ld"
+       if test "$ac_cv_sizeof_long" = "8"; then
+         pid_t_fmt="d"
+       else
+         pid_t_fmt="ld"
+       fi
        ;;
    *aix4*|*aix5*)
        ssize_t_fmt="ld"
