Leverage the new apr_uintptr_t type for our ULONG_PTR members.
PR: 44327
Submitted by: Curt Arnold <carnold apache.org>
Backports: r652866


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/1.3.x@652867 13f79535-47bb-0310-9956-ffa450edef68

--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -287,6 +287,12 @@ typedef  @ino_t_value@           apr_ino_t;
 
 #define APR_SIZEOF_VOIDP @voidp_size@
 
+#if APR_SIZEOF_VOIDP == 8
+typedef  apr_uint64_t            apr_uintptr_t;
+#else
+typedef  apr_uint32_t            apr_uintptr_t;
+#endif
+
 /* Are we big endian? */
 #define APR_IS_BIGENDIAN	@bigendian@
 
