--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -495,6 +495,8 @@ typedef  int         gid_t;
 #error no decision has been made on APR_PATH_MAX for your platform
 #endif
 
+#define APR_DSOPATH "@shlibpath_var@"
+
 /** @} */
 /** @} */
 
