--- a/configure.in
+++ b/configure.in
@@ -351,7 +351,7 @@ case "$host:$CC" in
 	;;
 esac
 
-AC_CACHE_CHECK([whether the compiler provides atomic builtins], [atomic_builtins],
+AC_CACHE_CHECK([whether the compiler provides atomic builtins], [ap_cv_atomic_builtins],
 [AC_TRY_RUN([
 int main()
 {
@@ -387,9 +387,9 @@ int main()
         return 1;
 
     return 0;
-}], [atomic_builtins=yes], [atomic_builtins=no], [atomic_builtins=no])])
+}], [ap_cv_atomic_builtins=yes], [ap_cv_atomic_builtins=no], [ap_cv_atomic_builtins=no])])
 
-if test "$atomic_builtins" = "yes"; then
+if test "$ap_cv_atomic_builtins" = "yes"; then
     AC_DEFINE(HAVE_ATOMIC_BUILTINS, 1, [Define if compiler provides atomic builtins])
 fi
 
