Adopt conditional handling for the new AC_USE_SYSTEM_EXTENSIONS as of 2.60.
Submitted by: Arfrever Frehtes Taifersar Arahesis <arfrever.fta gmail.com>



git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/0.9.x@670002 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -120,10 +120,14 @@ AC_CHECK_PROG(ASCPP, cpp, cpp)
 AC_CHECK_TOOL(AR, ar, ar)
 
 dnl Various OS checks that apparently set required flags
+ifdef([AC_USE_SYSTEM_EXTENSIONS], [
+AC_USE_SYSTEM_EXTENSIONS
+], [
 AC_AIX
-AC_ISC_POSIX
 AC_MINIX
+])
 
+AC_ISC_POSIX
 APR_EBCDIC
 
 dnl this is our library name
