Backport r731783 from the trunk. Add AC_MSG_RESULT after AC_MSG_CHECKING. PR 46427 Patch by Rainer Jung <rainer.jung kippdata.de>
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/1.3.x@731785 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -1947,6 +1947,9 @@ fi
 
 if test "$apr_fcntl_tryacquire_eacces" = "1"; then
   AC_DEFINE(FCNTL_TRYACQUIRE_EACCES, 1, [Define if fcntl returns EACCES when F_SETLK is already held])
+  AC_MSG_RESULT(yes)
+else
+  AC_MSG_RESULT(no)
 fi
 
 
