Backport r733052 from the trunk. Fix buildconf with libtool 2.2:
* buildconf: Use a different Extremely Ugly Hack to extract and copy
  the list of .m4 files needed directly from libtoolize.

* configure.in: Include more files which might be needed by libtool.

* build/: Ignore more.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/1.3.x@747266 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -20,6 +20,10 @@ sinclude(build/apr_win32.m4)
 sinclude(build/apr_hints.m4)
 sinclude(build/libtool.m4)
 sinclude(build/ltsugar.m4)
+sinclude(build/argz.m4)
+sinclude(build/ltoptions.m4)
+sinclude(build/ltversion.m4)
+sinclude(build/lt~obsolete.m4)
 
 dnl Hard-coded inclusion at the tail end of apr_private.h:
 AH_BOTTOM([
