--- a/configure.in
+++ b/configure.in
@@ -467,6 +467,9 @@ case $host in
        ;;
    *mingw*)
        OSDIR="win32"
+       ac_cv_file__dev_zero="no"
+       ac_cv_func_setpgrp_void="no"
+       apr_cv_tcp_nodelay_with_cork="no"
        enable_threads="system_threads"
        eolstr="\\n"
        proc_mutex_is_global=1
