--- a/libapr.rc
+++ b/libapr.rc
@@ -1,7 +1,7 @@
 #include "apr_general.h"
 #include "apr_version.h"
 
-#define APR_COPYRIGHT "Copyright 2000-2005 The Apache Software " \
+#define APR_COPYRIGHT "Copyright (c) 2009 The Apache Software " \
                       "Foundation or its licensors, as applicable."
 
 #define APR_LICENSE "Licensed under the Apache License, Version 2.0 " \
@@ -55,7 +55,7 @@ BEGIN
   BEGIN
     BLOCK "040904b0"
     BEGIN
-    VALUE "Comments", APR_LICENSE "\0"
+      VALUE "Comments", APR_LICENSE "\0"
       VALUE "CompanyName", "Apache Software Foundation\0"
       VALUE "FileDescription", "Apache Portable Runtime Library\0"
       VALUE "FileVersion", APR_VERSION_STRING "\0"
