--- a/configure.in
+++ b/configure.in
@@ -8,6 +8,7 @@ AC_PREREQ(2.50)
 
 AC_INIT(build/apr_common.m4)
 AC_CONFIG_HEADER(include/arch/unix/apr_private.h)
+AC_CONFIG_MACRO_DIR(build)
 AC_CONFIG_AUX_DIR(build)
 
 dnl 
@@ -187,7 +188,9 @@ case $host in
         fi
     else
     dnl libtoolize requires that the following not be indented
+    dnl should become LT_INIT(win32-dll)
 AC_PROG_LIBTOOL
+AC_LIBTOOL_WIN32_DLL
         # get libtool's setting of shlibpath_var
         eval `grep "^shlibpath_var=[[A-Z_]]*$" $apr_builddir/libtool`
         if test "x$shlibpath_var" = "x"; then
