--- a/configure.in
+++ b/configure.in
@@ -485,6 +485,7 @@ case $host in
        ac_cv_file__dev_zero="no"
        ac_cv_func_setpgrp_void="no"
        apr_cv_tcp_nodelay_with_cork="no"
+       apr_cv_osuuid="yes"
        enable_threads="system_threads"
        eolstr="\\n"
        proc_mutex_is_global=1
