--- a/configure.in
+++ b/configure.in
@@ -482,17 +482,14 @@ case $host in
        ;;
    *mingw*)
        OSDIR="win32"
-       ac_cv_file__dev_zero="no"
-       ac_cv_func_setpgrp_void="no"
-       apr_cv_tcp_nodelay_with_cork="no"
        enable_threads="system_threads"
-       eolstr="\\n"
+       eolstr="\\r\\n"
+       file_as_socket=0
        proc_mutex_is_global=1
        OBJECTS_PLATFORM='$(OBJECTS_win32)'
        ;;
    *cygwin*)
        OSDIR="unix"
-       APR_ADDTO(CPPFLAGS,-DCYGWIN)
        enable_threads="no"
        eolstr="\\n"
        ;;
